--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ author:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/mverbaas"
     - label: "LinkedIn"
-      icon: "fab fa-fw fa-LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://github.com/mverbaas"
     # - label: "Instagram"
     #   icon: "fab fa-fw fa-instagram"
