linkedin in footer

--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ author:
       url: "https://github.com/mverbaas"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://github.com/mverbaas"
+      url: "https://www.linkedin.com/in/mark-verbaas-b94a2a32/"
     # - label: "Instagram"
     #   icon: "fab fa-fw fa-instagram"
     #   url: "https://instagram.com/"
@@ -86,6 +86,9 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/mverbaas"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/mark-verbaas-b94a2a32/"
     # - label: "Instagram"
     #   icon: "fab fa-fw fa-instagram"
     #   url: "https://instagram.com/"
