--- a/_config.yml
+++ b/_config.yml
@@ -62,9 +62,9 @@ author:
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "Something nice here."
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://mverbaas.github.io"
+    # - label: "Website"
+    #   icon: "fas fa-fw fa-link"
+    #   url: "https://mverbaas.github.io"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/mverbaas"
