Endorsement of Alex Volok

--- a/_config.yml
+++ b/_config.yml
@@ -112,6 +112,12 @@ defaults:
     values:
       layout: single
       author_profile: true
+  - scope:
+      path: "_endorsements"
+      type: pages
+    values:
+      layout: single
+      author_profile: true 
 
 category_archive:
   type: liquid
